<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/MatchMatch.Vertical">
    <com.kotlin.base.widgets.HeaderBar
            style="@style/MatchWrap"
            app:titleText="@string/setting"/>
    <TextView
            android:id="@+id/mUserProtocolTv"
            style="@style/SettingItemStyle"
            android:text="@string/protocol"/>
    <TextView
            android:id="@+id/mFeedBackTv"
            style="@style/SettingItemStyle"
            android:text="@string/feedback"/>
    <TextView
            android:id="@+id/mAboutTv"
            style="@style/SettingItemStyle"
            android:text="@string/about"/>
    <Button
            android:id="@+id/mLogoutBtn"
            android:text="@string/log_out"
            style="@style/FullBtnStyle"
            android:enabled="true"
    />
</LinearLayout>
